# sirs

./: .gitignore  index.html  justfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
assets/: index-q1y_JDbS.js
rust-sirs/: Cargo.toml
rust-sirs/src/: lib.rs
src/: App.tsx  index.css
src/components/: SIRSModel.tsx
src/rust-sirs/: rust_sirs.d.ts  rust_sirs.js  rust_sirs_bg.wasm.d.ts
src/rust-sirs/pkg/: package.json
