[package]
name = "rust-sirs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
ode_solvers = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"
nalgebra = "0.31.4"

[profile.release]
opt-level = 3
